fixed alignment

--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -52,6 +52,7 @@
     td {
       display: table-cell;
       padding: 12px 16px;
+      vertical-align: middle;
 
       &.onClick {
         cursor: pointer;
